<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_title">USB Serial For Android Example</string>
    <string name="app_name">USB Serial Example</string>
    <string name="devices">USB Devices</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="descri_air_pr_unit">压力单位</string>
    <string name="descri_air_pr_value">报警上限</string>
    <string name="descri_dev_disconnecttion">硬件断开连接</string>
    <string name="descri_disconnecttion">请确认USB是否连接？</string>
    <string name="descri_not_permission">没有权限使用设备，应用无法正常运行！\10请重新连接硬件后授予权限！</string>
    <string name="descri_pair_accord">用匹配器在120s内完成对轮胎的匹配</string>
    <string name="descri_pair_all">匹配器匹配</string>
    <string name="descri_pair_compelete">匹配完成</string>
    <string name="descri_pair_compelete_agin">重新匹配</string>
    <string name="descri_pair_compelete_exit">退出匹配</string>
    <string name="descri_pair_hint">先点击轮胎，然后在120s内对轮胎放气或加气，进行轮胎匹配</string>
    <string name="descri_pair_hint2">收到数据后，点击对应轮胎位置，有数值显示后再依次匹配其它轮胎</string>
    <string name="descri_pair_isexist">该位置已经匹配有轮胎，是否要覆盖</string>
    <string name="descri_pair_select_descri">匹配方式选择</string>
    <string name="descri_pair_timeout">匹配超时</string>
    <string name="descri_phone_wran_auto">手机警报声音</string>
    <string name="descri_setting_air_error_min_more_max">设置失败,气压下限大于气压上限</string>
    <string name="descri_setting_air_unit">压力单位</string>
    <string name="descri_setting_air_value">压力上限设置</string>
    <string name="descri_setting_success">设置成功</string>
    <string name="descri_setting_tp_descri">温馨提示：\10\101.当气压超过推荐温度值时，轮胎高温报警。\10\102.请根据自车轮胎参数设定推荐值。</string>
    <string name="descri_setting_tp_unit">温度单位</string>
    <string name="descri_setting_tp_value">温度上限设置</string>
    <string name="descri_state__air_leak">慢漏气报警</string>
    <string name="descri_state_height_air">气压高报警</string>
    <string name="descri_state_height_tp">高温报警</string>
    <string name="descri_state_low_air">气压低报警</string>
    <string name="descri_state_low_power">传感器低电报警</string>
    <string name="descri_state_quick_air_leak">快漏气报警</string>
    <string name="descri_state_tyre_invalid">轮胎失效报警</string>
    <string name="descri_switch_success">轮胎互换成功</string>
    <string name="descri_switch_tryes">轮胎位置调整</string>
    <string name="descri_switch_tryes2">轮胎位置互换</string>
    <string name="descri_system_prepare">系统准备中\10......</string>
    <string name="descri_tp_unit">报警下限</string>
    <string name="descri_tp_value">温度上限</string>
    <string name="descri_tyre_lb">左后轮</string>
    <string name="descri_tyre_lf">左前轮</string>
    <string name="descri_tyre_pair">安装匹配</string>
    <string name="descri_tyre_rb">右后轮</string>
    <string name="descri_tyre_rf">右前轮</string>
    <string name="descri_tyreinfo_detail_title">胎压监测</string>
    <string name="descri_tyreinfo_title">点轮胎查看详情</string>
    <string name="descri_unpair">取消配对</string>
    <string name="descri_usb_enable">硬件设备连接成功</string>
    <string name="descri_usb_unable">硬件设备连接失败</string>
    <string name="exit">退出</string>
    <string name="exit_program">是否退出程序？</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="strConfirm">确认</string>
    <string name="strEngineStart">车机已开机</string>
    <string name="strPressureLowerLimitError">最低气压下限值不能大于已设置的气压上限值</string>
    <string name="strPressureUpperLimitError">最低气压上限值不能小于已设置的气压下限值</string>
    <string name="strSelSwitchTyre">请选择要调整的轮胎</string>
    <string name="strUpdateTip">发现新版本！</string>
    <string name="stringSettingsAppAlarmSound">车机报警声音</string>
    <string name="stringSettingsDeviceAlarmSound">设备报警声音</string>
    <string name="stringSettingsDeviceNotConnect">设备未连接</string>
    <string name="stringSettingsFloatingWindow">悬浮窗</string>
    <string name="stringSettingsIsCloseAppSound">是否关闭车机声音?</string>
    <string name="stringSettingsIsCloseDeviceSound">是否关闭设备声音?</string>
    <string name="stringSettingsIsCloseFloatingWindow">是否关闭悬浮窗?</string>
    <string name="stringSettingsIsReset">是否恢复出厂设置?</string>
    <string name="stringSettingsLimitDescription">温馨提示：\10\10(1)当气压超过推荐气压值的125%时，轮胎高压报警。\10\10(2)当气压低于推荐气压值得75%时，轮胎低压报警。\10\10(3)请根据自车轮胎参数设定推荐值</string>
    <string name="stringSettingsLimitDescriptionTemperature">温馨提示：\10\10(1)当温度超过温度上限值时，轮胎高温报警。\10\10(2)请根据自车轮胎参数设定温度上限值。</string>
    <string name="stringSettingsLowerLimitSet">压力下限设置</string>
    <string name="stringSettingsNo">否</string>
    <string name="stringSettingsPressureMax">压力上限</string>
    <string name="stringSettingsPressureMin">压力下限</string>
    <string name="stringSettingsPressureUnit">压力单位</string>
    <string name="stringSettingsPressureUnitSettings">压力单位设置</string>
    <string name="stringSettingsReset">恢复出厂设置</string>
    <string name="stringSettingsStayTime">开机停留时间等级</string>
    <string name="stringSettingsTemperatureMax">温度上限</string>
    <string name="stringSettingsTemperatureUnit">温度单位</string>
    <string name="stringSettingsTemperatureUpperLimitSet">温度上限设置</string>
    <string name="stringSettingsTireMatch">轮胎匹配</string>
    <string name="stringSettingsTireSettings">轮胎设置</string>
    <string name="stringSettingsUpperLimitSet">压力上限设置</string>
    <string name="stringSettingsYes">是</string>
    <string name="stringVersionTitle">查看系统版本号</string>
    <string name="sure">自动配对</string>
    <string name="title_setting">设置</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="carimge">carImge</string>
    <string name="ivtyrelf">ivTyreLF</string>
    <string name="bar">--Bar</string>
    <string name="c">--C°</string>
</resources>
