<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    android:padding="@dimen/widget_margin"
    android:theme="@style/ThemeOverlay.Usbserialforandroid.AppWidgetContainer">

    <TextView
        android:id="@+id/ivTyreLFTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView"
        android:layout_centerInParent="true"
        android:layout_marginBottom="-55dp"
        android:layout_toStartOf="@id/ivTyreLF"
        android:background="#00000000"
        android:contentDescription="@string/appwidget_text"
        android:text="@string/bar"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/ivTyreLBTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerInParent="true"
        android:layout_marginTop="-85dp"
        android:layout_toStartOf="@id/ivTyreLB"
        android:background="#00000000"
        android:contentDescription="@string/appwidget_text"
        android:text="@string/bar"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold|italic" />
    <TextView
        android:id="@+id/ivTyreRFTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_toEndOf="@id/ivTyreRF"
        android:layout_above="@+id/imageView"
        android:background="#00000000"
        android:layout_marginBottom="-55dp"
        android:contentDescription="@string/appwidget_text"
        android:text="@string/bar"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold|italic" />
    <TextView
        android:id="@+id/ivTyreRBTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerInParent="true"
        android:layout_toEndOf="@id/ivTyreRB"
        android:background="#00000000"
        android:layout_marginTop="-85dp"
        android:contentDescription="@string/appwidget_text"
        android:text="@string/bar"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/ivTyreLFTempTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_toStartOf="@id/ivTyreLF"
        android:layout_above="@+id/imageView"
        android:background="#00000000"
        android:layout_marginBottom="-78dp"
        android:contentDescription="@string/appwidget_text"
        android:text="@string/c"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="bold|italic" />
    <TextView
        android:id="@+id/ivTyreLBTempTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerInParent="true"
        android:layout_toStartOf="@id/ivTyreLB"
        android:background="#00000000"
        android:layout_marginTop="-62dp"
        android:contentDescription="@string/appwidget_text"
        android:text="@string/c"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="bold|italic" />
    <TextView
        android:id="@+id/ivTyreRFTempTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_toEndOf="@id/ivTyreRF"
        android:layout_above="@+id/imageView"
        android:background="#00000000"
        android:layout_marginBottom="-78dp"
        android:contentDescription="@string/appwidget_text"
        android:text="@string/c"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="bold|italic" />
    <TextView
        android:id="@+id/ivTyreRBTempTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerInParent="true"
        android:layout_toEndOf="@id/ivTyreRB"
        android:background="#00000000"
        android:layout_marginTop="-62dp"
        android:contentDescription="@string/appwidget_text"
        android:text="@string/c"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="bold|italic" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="-35dp"
        android:layout_marginEnd="-35dp"
        android:contentDescription="@string/carimge"
        android:scaleType="center"
        android:scaleX="0.7"
        android:scaleY="0.7"
        app:srcCompat="@drawable/img_car_white" />

    <ImageView
        android:id="@+id/ivTyreLF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="false"
        android:layout_centerVertical="false"
        android:layout_toStartOf="@id/imageView"
        android:layout_above="@+id/imageView"
        android:layout_marginBottom="-90dp"
        android:contentDescription="@string/ivtyrelf"
        app:srcCompat="@drawable/icon_wheel_gray" />
    <ImageView
        android:id="@+id/ivTyreRF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/imageView"
        android:layout_above="@+id/imageView"
        android:layout_marginBottom="-90dp"
        android:layout_centerVertical="true"
        android:contentDescription="@string/ivtyrelf"
        app:srcCompat="@drawable/icon_wheel_gray" />

    <ImageView
        android:id="@+id/ivTyreLB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="-80dp"
        android:layout_toStartOf="@id/imageView"
        android:contentDescription="@string/ivtyrelf"
        app:srcCompat="@drawable/icon_wheel_gray" />

    <ImageView
        android:id="@+id/ivTyreRB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="-80dp"
        android:layout_toEndOf="@id/imageView"
        android:contentDescription="@string/ivtyrelf"
        app:srcCompat="@drawable/icon_wheel_gray" />
</RelativeLayout>